# youtube_suite

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schemas.py  002_add_language_columns.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  jobs.ts  market.ts  studio.ts
frontend/src/components/layout/: TabBar.tsx  ToastContainer.tsx
frontend/src/components/market/: MarketTab.tsx  OverviewKPIs.tsx  SearchModal.tsx  TrendingButton.tsx  VideoTable.tsx
frontend/src/components/studio/: ActionButtons.tsx  AssetDetail.tsx  AssetList.tsx  AssetListItem.tsx  ChaptersPanel.tsx  DescriptionPanel.tsx  DropZone.tsx  JobWatcher.tsx  ScoreSliders.tsx  ShortsModal.tsx  StudioTab.tsx  TranscriptPreview.tsx  VideoPlayer.tsx
frontend/src/hooks/: useJobPoller.ts
frontend/src/lib/: formatters.ts
frontend/src/stores/: toastStore.ts
frontend/src/types/: market.ts  studio.ts
mem/: example_TFM.fdb_latexmk  example_TFM.fls  example_TFM.tex  references.bib
scripts/: load_kaggle_trending.py  migrate_from_legacy.py
src/youtube_suite/: __init__.py  __main__.py  cli.py
src/youtube_suite/api/: deps.py  main.py  schemas.py
src/youtube_suite/api/routers/: __init__.py  insights.py  jobs.py  market.py  studio.py
src/youtube_suite/config/: settings.py
src/youtube_suite/domain/: ports.py
tests/: test_smoke.py
(+48 files in other folders)
